--- a/Cryotherapy_Ensemble_model.ipynb
+++ b/Cryotherapy_Ensemble_model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5Ou2aa42lS0CjMoR38KDR",
+      "authorship_tag": "ABX9TyMw9dk57+l6pArz8C+IYSxI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,6 +68,196 @@
         "df_cryotherapydata = pd.read_csv(url)\n",
         "#df = pd.read_csv(url)\n",
         "print(df_cryotherapydata.head(5))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#####The following steps showcase an example of how to combine the predictions of the decision tree, SVMs, and logistic regression models for a classification problem"
+      ],
+      "metadata": {
+        "id": "Fhig-YINwrKz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#import required libraries\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.ensemble import VotingClassifier\n"
+      ],
+      "metadata": {
+        "id": "uuEy1KqUwmP_"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Create train and test cample from our dataset\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "# Create feature and response state\n",
+        "feature_columns=['sex','age','Time','Number_of_Warts','Type','Area']\n",
+        "X=df_cryotherapydata[feature_columns]\n",
+        "y=df_cryotherapydata['Result_of_Treatment']\n",
+        "\n",
+        "# Create train and test results\n",
+        "X_train, X_test, Y_train, Y_test=train_test_split(X,y,test_size=0.2,random_state=1)"
+      ],
+      "metadata": {
+        "id": "Co9qf7bqxDyn"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#We build our models with the decision tree, SVM, and logistic regression algorithms:\n",
+        "\n",
+        "# Create the submodels\n",
+        "estimators=[]\n",
+        "\n",
+        "dt_model=DecisionTreeClassifier(random_state=1)\n",
+        "estimators.append(('DecisionTree',dt_model))\n",
+        "\n",
+        "svm_model=SVC(random_state=1)\n",
+        "estimators.append(('SupportVector',svm_model))\n",
+        "\n",
+        "logit_model=LogisticRegression(random_state=1)\n",
+        "estimators.append(('Logistic Regression',logit_model))"
+      ],
+      "metadata": {
+        "id": "WwB4s5gSyNBR"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# build individual models with each of the classifiers we've chosen:\n",
+        "\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "for each_estimator in (dt_model, svm_model, logit_model):\n",
+        "  each_estimator.fit(X_train, Y_train)\n",
+        "  Y_pred=each_estimator.predict(X_test)\n",
+        "  print(each_estimator.__class__.__name__,accuracy_score(Y_test,Y_pred))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fb_7lU75yxxk",
+        "outputId": "78fe5269-c651-43e6-cc5d-b1899ee09995"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "DecisionTreeClassifier 0.8333333333333334\n",
+            "SVC 0.4444444444444444\n",
+            "LogisticRegression 0.9444444444444444\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Using VotingClassifier() to build ensemble model with Hard Voting\n",
+        "\n",
+        "ensemble_model=VotingClassifier(estimators=estimators,voting='hard')\n",
+        "\n",
+        "ensemble_model.fit(X_train, Y_train)\n",
+        "predicted_labels=ensemble_model.predict(X_test)\n",
+        "\n",
+        "print(\"Classifier Accuracy using Hard voting is :\", accuracy_score(Y_test, predicted_labels))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kJ1izYUlzcCt",
+        "outputId": "afee2b4d-5dfd-415e-e8f7-a9f0930d6b6d"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Classifier Accuracy using Hard voting is : 0.8333333333333334\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Many classifiers can estimate class probabilities. In this case, the class labels are predicted by averaging the class probabilities. This is called soft voting and is recommended for an ensemble of well-tuned classifiers."
+      ],
+      "metadata": {
+        "id": "23XL3ZDc0iVH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Using VotingClassifier() to build ensemble model with Hard Voting\n",
+        "#simply replace voting='hard' with voting='soft' in VotingClassifier().\n",
+        "\n",
+        "# create the sub models\n",
+        "estimators = []\n",
+        "\n",
+        "dt_model = DecisionTreeClassifier(random_state=1)\n",
+        "estimators.append(('DecisionTree', dt_model))\n",
+        "\n",
+        "svm_model = SVC(random_state=1, probability=True)\n",
+        "estimators.append(('SupportVector', svm_model))\n",
+        "\n",
+        "logit_model = LogisticRegression(random_state=1)\n",
+        "estimators.append(('Logistic Regression', logit_model))\n",
+        "\n",
+        "for each_estimator in (dt_model, svm_model, logit_model):\n",
+        "    each_estimator.fit(X_train, Y_train)\n",
+        "    Y_pred = each_estimator.predict(X_test)\n",
+        "    print(each_estimator.__class__.__name__, accuracy_score(Y_test, Y_pred))\n",
+        "\n",
+        "# Using VotingClassifier() to build ensemble model with Soft Voting\n",
+        "ensemble_model = VotingClassifier(estimators=estimators, voting='soft')\n",
+        "ensemble_model.fit(X_train,Y_train)\n",
+        "predicted_labels = ensemble_model.predict(X_test) \n",
+        "print(\"Classifier Accuracy using Soft Voting: \", accuracy_score(Y_test, predicted_labels))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QkRwl4R50nEi",
+        "outputId": "8e37cbc6-75c8-49c1-c876-9e5cf19a8cab"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "DecisionTreeClassifier 0.8333333333333334\n",
+            "SVC 0.4444444444444444\n",
+            "LogisticRegression 0.9444444444444444\n",
+            "Classifier Accuracy using Soft Voting:  0.8888888888888888\n"
+          ]
+        }
       ]
     }
   ]
